# lifecycle-allocation

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  configuration.md  examples.md  index.md  methodology.md  quickstart.md  risky-human-capital.md
examples/notebooks/: risky_human_capital.ipynb  tutorial.ipynb
examples/profiles/: mid_career.yaml  near_retirement.yaml  tech_worker.yaml  young_saver.yaml
lifecycle_allocation/: __init__.py
lifecycle_allocation/cli/: main.py
lifecycle_allocation/core/: allocation.py  discounting.py  explain.py  human_capital.py  income_models.py  models.py  mortality.py  strategies.py
lifecycle_allocation/io/: loaders.py
lifecycle_allocation/viz/: charts.py  themes.py
papers/: generate_figures.py  references.bib  risky_human_capital.tex  risky_human_capital_explainer.tex
streamlit_app/: app.py  requirements.txt
tests/: conftest.py  test_allocation.py  test_cli.py  test_human_capital.py  test_io.py  test_models.py  test_strategies.py  test_viz_smoke.py
