[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifecycle-allocation"
version = "0.1.0"
description = "Lifecycle portfolio allocation framework inspired by Choi et al."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Engineer Investor", email = "egr.investor@gmail.com" },
]
keywords = ["finance", "portfolio", "allocation", "lifecycle", "human-capital", "investment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "pandas-stubs>=2.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
lifecycle-allocation = "lifecycle_allocation.cli.main:cli"

[project.urls]
Homepage = "https://github.com/engineerinvestor/lifecycle-allocation"
Repository = "https://github.com/engineerinvestor/lifecycle-allocation"
Documentation = "https://engineerinvestor.github.io/lifecycle-allocation"
Issues = "https://github.com/engineerinvestor/lifecycle-allocation/issues"
Changelog = "https://github.com/engineerinvestor/lifecycle-allocation/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["lifecycle_allocation*"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py310"]
line-length = 99

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
